--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.datasource.url=jdbc:mysql://localhost:3306/codeanalyser?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/codeanalyser?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=codeanalyseruser
 spring.datasource.password=password_123
 mysql.driver.class=com.mysql.jdbc.Driver
